[package]
name = "connect4-moderator-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
rand = "0.9.2"
async-trait = "0.1.89"